--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,39 @@ hr {
   margin: 20px;
 }
 
-
 * {
-  font-family: "Quicksand", Sans-Serif;
+  color: white;
+  font-family: 'Quicksand', Sans-Serif;
   scroll-behavior: smooth;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  color: hotpink;
+  width: 2px; /* Set a specific slider handle width */
+  height: 2px; /* Slider handle height */
+  background: #04aa6d; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  width: 2px; /* Set a specific slider handle width */
+  height: 2px; /* Slider handle height */
+  background: #04aa6d; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.pagination {
+  display: flex;
+}
+
+.pagination * {
+  padding: 6px 8px;
 }
